fix: 修复页签项阴影遮挡上一行页签项问题 | Fixed the issue of the tab item shadow covering the previous line of the tab item.

--- a/style/module/tab-bar.css
+++ b/style/module/tab-bar.css
@@ -17,6 +17,7 @@
     box-shadow: none;
     border: 2px solid var(--b3-list-hover);
     border-radius: var(--custom-border-radius);
+    box-shadow: none !important;
 }
 
 /* 页签项图标 */
